--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Vue Boolzapp</title>
 </head>
 <body>
+    <div id="app">
+        
+
+    </div>
     
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="Javascript/script.js"></script>
