--- a/index.html
+++ b/index.html
@@ -58,12 +58,20 @@
                        
                     </div>
                 </div>
-                <div class="col-12 col-md-8">
+                <div class="col-12 col-md-8 ">
                     <div class="bg-bar">
 
                     </div>
                     <div class="h0 background-img">
                         
+                    </div>
+                    <div class="bg-bar d-flex align-items-center justify-content-around">
+                        <span><i class="fa-regular fa-face-smile font-size-icons ms-4 "></i></span>
+                        <input type="text" class="form-control w-75 mx-5 bg-search d-inline-block my-2"
+                                placeholder="Scrivi un messaggio">
+                                <span><i class="fa-solid fa-microphone font-size-icons me-4"></i></span>
+
+
                     </div>
 
                 </div>
