--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                             </div>
                         </div>
 
-                        <ul class="list-group bg-white ">
-                            <li v-for="(contact, index) in contacts" :key="contact.id">
+                        <div class="list-group bg-white ">
+                            <div v-for="(contact, index) in contacts" :key="contact.id">
 
                                 <img class="rounded-circle" :src="contact.avatar" :alt="contact.avatar">
                                 {{contact.name}} {{contact.messages.last}}
@@ -56,8 +56,8 @@
                                     <span class="font-size-msg">{{contact.messages[ contact.messages.length - 1
                                         ].date}}</span>
                                 </div>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -66,11 +66,11 @@
                         <div class="col-12 bg-bar d-flex  align-items-center justify-content-between">
                             <div class="d-flex">
 
-                                <img class="rounded-circle" src="img/avatar_1.jpg" alt="Michele">
+                                <img :src="contacts[activeContactIndex].avatar" :alt="contacts[activeContactIndex].name">
 
                                 <div >
                                     <span>Michele</span>
-                                    <span>Ultimo accesso oggi</span>
+                                    <span>Ultimo accesso  </span>
                                 </div>
                             </div>
                        
@@ -81,18 +81,18 @@
                             </div>
                         </div>
                         <div class="h1 col-12 flex-grow-1 overflow-y-auto">
-                            <div class="d-flex py-3">
-                                <div class="text-sent">Ciao, come stai?</div>
+                            <div class="d-flex py-3" v-for ="(msg,index) in contacts [activeContactIndex].messages" :key="index">
+                                <div class="msg">{{msg.message}}</div>
                             </div>
-                            <div class="d-flex py-3">
+                            <!--<div class="d-flex py-3">
                                 <div class="text-received">Ciao, bene grazie</div>
-                            </div>
+                            </div>-->
 
                         </div>
                         <div class="bg-bar d-flex align-items-center justify-content-around">
                             <span><i class="fa-regular fa-face-smile font-size-icons ms-4 "></i></span>
                             <input type="text" class="form-control w-75 mx-5 bg-search d-inline-block my-2"
-                                placeholder="Scrivi un messaggio" v-model="newText" @keyup.enter="addText">
+                                placeholder="Scrivi un messaggio" v-model="text" @keyup.enter="addText">
                             <span><i class="fa-solid fa-microphone font-size-icons me-4 " @click="addText"></i></span>
 
 
