--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                             </div>
                         </div>
 
-                        <div class="list-group bg-white ">
-                            <div v-for="(contact, index) in contacts" :key="contact.id">
+                        <ul class="list-group bg-white ">
+                            <li v-for="(contact, index) in contacts" :key="contact.id" @click ="selectContact(contact.id)">
 
                                 <img class="rounded-circle" :src="contact.avatar" :alt="contact.avatar">
                                 {{contact.name}} {{contact.messages.last}}
@@ -56,8 +56,8 @@
                                     <span class="font-size-msg">{{contact.messages[ contact.messages.length - 1
                                         ].date}}</span>
                                 </div>
-                            </div>
-                        </div>
+                            </li>
+                        </dul>
 
                     </div>
                 </div>
