nome che cambia nella schermata  al click lista

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                                 <img :src="contacts[activeContactIndex].avatar" :alt="contacts[activeContactIndex].name">
 
                                 <div >
-                                    <span>Michele</span>
-                                    <span>Ultimo accesso  </span>
+                                    <span>{{contacts[activeContactIndex].name}}</span>
+                                    <span></span>
                                 </div>
                             </div>
                        
