--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                         </div>
                         <div class="bg-bar d-flex align-items-center justify-content-around">
                             <span><i class="fa-regular fa-face-smile font-size-icons ms-4 "></i></span>
-                            <input type="text" class="form-control w-75 mx-5 bg-search d-inline-block my-2"
-                                placeholder="Scrivi un messaggio" v-model="text" @keyup.enter="addText()">
-                            <span><i class="fa-solid fa-microphone font-size-icons me-4 " @click="addText"></i></span>
+                            <input type="text" class="form-control w-75 mx-5 bg-search  my-2"
+                                placeholder="Scrivi un messaggio" v-model="text" @keyup.enter="addText()"> 
+                            <span><i class="fa-solid fa-share font-size-icons me-4 pointer " @click="addText()"></i></span>
 
 
                         </div>
