--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
                             </div>
                         </div>
                         <div class="h1 col-12 flex-grow-1 overflow-y-auto">
-                            <div class="d-flex py-3" v-for ="(msg,index) in contacts [activeContactIndex].messages" :key="index">
-                                <div class="msg">{{msg.message}}</div>
+                            <div class="d-flex py-3" v-for ="(text,index) in contacts [activeContactIndex].messages" :key="index">
+                                <div class="font-size-msg " :class ="text.status">{{text.message}}</div>                                
                             </div>
-                            <!--<div class="d-flex py-3">
-                                <div class="text-received">Ciao, bene grazie</div>
-                            </div>-->
+                            
+                           
 
                         </div>
                         <div class="bg-bar d-flex align-items-center justify-content-around">
