funzioni option e delete

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <div class="font-size-msg " :class="text.status">
                                     <span>{{text.message}}</span>
                                     <div class="dropdown">
-                                        <i class="fa-solid fa-arrows-to-dot"></i>
+                                        <i class="fa-solid fa-arrows-to-dot" @click="option(i)"></i>
                                         <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="#">Action</a></li>
                                         <li><a class="dropdown-item" href="#">Another action</a></li>
