--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                                     <span class="font-size-msg">{{contact.name}}</span>
                                     <span class="font-size-msg">{{contact.messages[ contact.messages.length - 1
                                         ].message}} </span>
-                                    <span class="font-size-msg">{{contact.messages[ contact.messages.length - 1
-                                        ].date}}</span>
+                                    <span class="font-size-msg">{{generateText()}}</span>
                                 </div>
                             </li>
                             </dul>
@@ -72,11 +71,11 @@
                                     :alt="contacts[activeContactIndex].name">
 
 
-                                <div>
-                                    <span>{{contacts[activeContactIndex].name}}</span>
-                                    <span></span>
+                                <ul class="d-flex flex-column">
+                                    <li>{{contacts[activeContactIndex].name}}</li>
+                                    <li>Ultimo accesso {{generateText()}}</li>
 
-                                </div>
+                                </ul>
                               
                             </div>
 
@@ -87,12 +86,12 @@
                             </div>
                         </div>
                         <div class="h1 col-12 flex-grow-1 overflow-y-auto">
-                            <div class="d-flex py-3" v-for="(text,index) in activeContact.messages"
+                            <div class="d-flex py-3" v-for="(text,index) in contacts[activeContactIndex].messages"
                                 :key="index">
                                 <div class="font-size-msg " :class="text.status">
-                                    <span>{{text.message}}</span>
+                                    <span>{{text.message}} {{generateSplit()}} </span>
                                     <div class="dropdown">
-                                        <i class="fa-solid fa-arrows-to-dot" @click="option(index)" style="cursor:pointer"></i>
+                                        <i class="fa-solid fa-arrows-to-dot" @click="option()" style="cursor:pointer"></i>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="#">Message Info</a></li>
                                             <li><a class="dropdown-item" href="#" @click ="deleteText(index)">Delete message</a></li>                                        
